Fixed wrapping overlap issue for term page

--- a/app/styles/quickgo.css
+++ b/app/styles/quickgo.css
@@ -349,18 +349,15 @@ textarea.sidebar {
 }
 
 #term-section-nav {
-  min-width: 270px;
-  padding-left: none;
-  /*position: fixed;*/
+  padding-left: 0;
 }
 
 #term-section-nav li {
-
+  white-space: nowrap;
   margin: 3px;
   padding-left: 5px;
-  /*color: white;*/
   border-radius: 6px;
-  background-color: #1d8086/*#1d8086;*/
+  background-color: #1d8086;
 }
 
 li.section-disabled {
@@ -388,13 +385,11 @@ li.section-disabled {
 }
 
 .term-section-view {
-  /*background-color: #bce7e7;*/
   border-left: 1px solid white;
   line-height: 30px;
   height: 30px;
   padding-left: 2px;
   display: inline-block;
-  white-space: nowrap;
   color: white;
 }
 
